# sip-deliverables

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
0_preprocessing/: split.py
10_data/input/: README.md
10_data/labels/: data.yaml  notes.json
10_data/labels/labels/: 00009cad-445530_x0_x640_y9216_y9856.txt  00106bf7__470555_x1280_x1920_y5120_y5760_0.txt  00931f40-440535_x1536_x2176_y9216_y9856.txt  01998332-445530_x9728_x10000_y9728_y10000.txt  022a1b65-440535_x4608_x5248_y4608_y5248.txt  02b83a94-440530_x4096_x4736_y8192_y8832.txt  03631af5-440535_x8192_x8832_y5632_y6272.txt  0422cd6e-445530_x2560_x3200_y7680_y8320.txt  04ac1f46-440530_x3584_x4224_y1024_y1664.txt  04bd74ef__385525_x8960_x9600_y5760_y6400_0.txt  04d120e8-445530_x8704_x9344_y2560_y3200.txt  05369588-445530_x6144_x6784_y6144_y6784.txt  053a4adc-440530_x2048_x2688_y7680_y8320.txt  057c3e63__470555_x1920_x2560_y0_y640_0.txt  058d5c0e-440535_x2048_x2688_y2560_y3200.txt  05e55a6f-440535_x512_x1152_y0_y640.txt  (+1016 more)
10_data/validation-favorable/: data.yaml  labels.cache
10_data/validation-random/: data.yaml  labels.cache
1_training/: create_train_val_split.py  data_filters.py  dataset.py  helper.py  train_resnet.py  train_yolo.py
2_run/: run_resnet.py  run_yolo.py
3_test/: resnet_epochs.py  test_resnet.py  test_yolo.py
90_misc/: README.md  create_label_set.py  detected_trees.geojson  detected_trees_5.geojson  detected_trees_75.geojson  generate_goejson.py  stacked_prediction.py
90_misc/plot_generation/: generate_lineplot.py  generate_plots.py  helper.py
(+70 files in other folders)
